quem leu é baitola

--- a/Frontend/Main.html
+++ b/Frontend/Main.html
@@ -12,9 +12,9 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Cadastros</a>
                 <ul>
-                    <li><a href="/cadastro-profissional">Cadastro Profissional</a></li>
-                    <li><a href="/cadastro-equipamento">Cadastro Equipamento</a></li>
-                    <li><a href="/cadastro-setor">Cadastro Setor</a></li>
+                    <li><a href="/CadastroProfissional">Cadastro Profissional</a></li>
+                    <li><a href="/CadastroEquipamento">Cadastro Equipamento</a></li>
+                    <li><a href="/CadastroSetor">Cadastro Setor</a></li>
                 </ul>
             </li>
         </ul>
