--- a/Frontend/Main.html
+++ b/Frontend/Main.html
@@ -12,9 +12,9 @@
             <li><a href="#">Home</a></li>
             <li><a href="#">Cadastros</a>
                 <ul>
-                    <li><a href="/CadastroProfissional">Cadastro Profissional</a></li>
-                    <li><a href="/CadastroEquipamento">Cadastro Equipamento</a></li>
-                    <li><a href="/CadastroSetor">Cadastro Setor</a></li>
+                    <li><a href="Cadastro_Profissional.html">Cadastro Profissional</a></li>
+                    <li><a href="Cadastro_Equipamento.html">Cadastro Equipamento</a></li>
+                    <li><a href="Cadastro_Setor.html">Cadastro Setor</a></li>
                 </ul>
             </li>
         </ul>
