--- a/Frontend/Cadastro_Profissional.html
+++ b/Frontend/Cadastro_Profissional.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Profissional</title>
+    <link rel="stylesheet" href="cadastroP.css">
 </head>
 <body>
     <h1>Cadastro Profissional</h1>
@@ -31,6 +32,7 @@
         <input type="text" id="matricula" name="matricula" required><br>
 
         <input type="submit" value="Salvar">
+        <input type="submit" value="Voltar">
     </form>
 
     <script src="scripts.js"></script>
