--- a/Frontend/Cadastro_Setor.html
+++ b/Frontend/Cadastro_Setor.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro Setor</title>
+    <link rel="stylesheet" href="cadastroS.css">
 </head>
 <body>
     <h1>Cadastro Setor</h1>
