--- a/Frontend/Main.html
+++ b/Frontend/Main.html
@@ -14,7 +14,7 @@
                 <ul>
                     <li><a href="Cadastro_Profissional.html">Cadastro Profissional</a></li>
                     <li><a href="Cadastro_Equipamento.html">Cadastro Equipamento</a></li>
-                    <li><a href="C:\ENG1\Frontend\Cadastro_Setor.html">Cadastro Setor</a></li>
+                    <li><a href="Cadastro_Setor.html">Cadastro Setor</a></li>
                 </ul>
             </li>
         </ul>
