--- a/Frontend/Main.html
+++ b/Frontend/Main.html
@@ -16,11 +16,12 @@
                     <li><a href="Cadastro_Equipamento.html">Cadastro Equipamento</a></li>
                     <li><a href="Cadastro_Setor.html">Cadastro Setor</a></li>
                 </ul>
-            </li>
+            <li><a href="#">Aluguel</a>
+            <li><a href="estoque.html">Estoque</a></li>
         </ul>
     </nav>
 
-    <h1>Bem-vindo ao Meu Site de Cadastros</h1>
+    <h1>Bem-vindo</h1>
 
     <script src="scripts.js"></script>
 </body>
