--- a/Frontend/Main.html
+++ b/Frontend/Main.html
@@ -22,6 +22,6 @@
 
     <h1>KKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK</h1>
 
-    <script src="scripts.js"></script>
+    <script src="backend/estoque.js"></script>
 </body>
 </html>
