--- a/Frontend/Main.html
+++ b/Frontend/Main.html
@@ -16,8 +16,9 @@
                     <li><a href="Cadastro_Equipamento.html">Cadastro Equipamento</a></li>
                     <li><a href="Cadastro_Setor.html">Cadastro Setor</a></li>
                 </ul>
-            <li><a href="#">Aluguel</a>
-            <li><a href="estoque.html">Estoque</a></li>
+            <li><a href="#">Aluguel</a></li>
+            <li><a href="#">Estoque</a></li>
+            <li><a href="#">Relatorios</a></li>
         </ul>
     </nav>
 
