--- a/Frontend/Main.html
+++ b/Frontend/Main.html
@@ -17,7 +17,7 @@
                     <li><a href="Cadastro_Setor.html">Cadastro Setor</a></li>
                 </ul>
             <li><a href="#">Aluguel</a></li>
-            <li><a href="#">Estoque</a></li>
+            <li><a href="../Backend/estoque.html">Estoque</a></li>
             <li><a href="#">Relatorios</a></li>
         </ul>
     </nav>
