--- a/Backend/estoque.html
+++ b/Backend/estoque.html
@@ -7,46 +7,13 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
         }
-
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-        }
-
-        h2 {
-            margin-top: 20px;
-        }
-
-        form {
-            margin-top: 20px;
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            gap: 10px;
-        }
-
-        label,
-        input,
-        select,
-        button {
-            margin-bottom: 10px;
-            width: 100%;
-        }
-
         table {
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
         }
-
-        table,
-        th,
-        td {
+        table, th, td {
             border: 1px solid #ddd;
             padding: 10px;
             text-align: left;
