--- a/Backend/estoque.html
+++ b/Backend/estoque.html
@@ -9,13 +9,14 @@
             font-family: Arial, sans-serif;
         }
         table {
-            width: 100%;
+            width: 90%;
             border-collapse: collapse;
-            margin-top: 20px;
+            margin-top: 100px;
+            text-align: center;
         }
         table, th, td {
-            border: 1px solid #ddd;
-            padding: 10px;
+            border: 3px solid #ddd;
+            padding: 5px;
             text-align: left;
         }
     </style>
