--- a/Backend/aluguel.html
+++ b/Backend/aluguel.html
@@ -3,15 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>protótipo de baixa fidelidade</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Aluguel</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+        }
+        table {
+            width: 90%;
+            border-collapse: collapse;
+            margin-top: 100px;
+            text-align: center;
+        }
+        table, th, td {
+            border: 3px solid #ddd;
+            padding: 5px;
+            text-align: left;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1>Protótipo de baixa fidelidade</h1>
+        <h1>Pedido</h1>
 
         <div id="formulario">
-            <h2>Adicionar Item ao Estoque</h2>
+            <h2>Requisiçao</h2>
             <label for="setor">Setor Solicitante:</label>
             <input type="text" id="setor" required>
 
