--- a/Backend/aluguel.html
+++ b/Backend/aluguel.html
@@ -23,8 +23,6 @@
 </head>
 <body>
     <div class="container">
-        <h1>Pedido</h1>
-
         <div id="formulario">
             <h2>Requisiçao</h2>
             <label for="setor">Setor Solicitante:</label>
@@ -73,11 +71,10 @@
                 </tr>
             </thead>
             <tbody>
-                <!-- Itens do estoque serão adicionados dinamicamente com JavaScript -->
             </tbody>
         </table>   
     </div>
 
-    <script src="script.js"></script>
+    <script src="aluguel.js"></script>
 </body>
 </html>
