--- a/Frontend/Main.html
+++ b/Frontend/Main.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <header>
+        <div id="logo">
+            <img src="logo.png" alt="Logo SGCM">
+            <span id="titulo">trab de EG</span>
+        </div>
+        <div id="usuarioInfo">
+            <span>Usuário: Administrador (Admin)</span>
+            <span>Papel: ADMIN</span>           
+            <a href="#" class="botao">Logout</a>
+        </div>
+    </header>
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
