--- a/Frontend/Main.html
+++ b/Frontend/Main.html
@@ -10,7 +10,7 @@
     <header>
         <div id="logo">
             <img src="logo.png" alt="#">
-            <span id="titulo">FUNAI 0800</span>
+            <span id="titulo">TESTE</span>
         </div>
         <div id="usuarioInfo">
             <span>Usuário: Administrador (Admin)</span>
@@ -33,11 +33,7 @@
         </ul>
     </nav>
 
-<<<<<<< HEAD
     <h1>Bem-vindo</h1>
-=======
-    <h1>KKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK</h1>
->>>>>>> b110980a22f750579619946e663e45ef8644434c
     <div id="logo">
             <img src="logo1.png" alt="">
         </div>
