--- a/Frontend/Main.html
+++ b/Frontend/Main.html
@@ -12,23 +12,18 @@
             <img src="logo.png" alt="#">
             <span id="titulo">FUNAI 0800</span>
         </div>
-        <div id="usuarioInfo">
-            <span>Usuário: Administrador (Admin)</span>
-            <span>Papel: ADMIN</span>           
-            <a href="#" class="botao">SAIR</a>
-        </div>
     </header>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="Main.html">Home</a></li>
             <li><a href="#">Cadastros</a>
                 <ul>
                     <li><a href="Cadastro_Profissional.html">Cadastro Profissional</a></li>
                     <li><a href="Cadastro_Equipamento.html">Cadastro Equipamento</a></li>
                     <li><a href="Cadastro_Setor.html">Cadastro Setor</a></li>
                 </ul>
-            <li><a href="../Backend/aluguel.html">Aluguel</a></li>
-            <li><a href="../Backend/estoque.html">Estoque</a></li>
+            <li><a href="aluguel.html">Aluguel</a></li>
+            <li><a href="estoque.html">Estoque</a></li>
             <li><a href="#">Relatorios</a></li>
         </ul>
     </nav>
