--- a/Frontend/estoque.html
+++ b/Frontend/estoque.html
@@ -1,27 +1,33 @@
 <!DOCTYPE html> <!-- Gardiny -->
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estoque</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-        }
-        table {
-            width: 90%;
-            border-collapse: collapse;
-            margin-top: 100px;
-            text-align: center;
-        }
-        table, th, td {
-            border: 3px solid #ddd;
-            padding: 5px;
-            text-align: left;
-        }
-    </style>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Meu Site de Cadastros</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <header>
+            <div id="logo">
+                <img src="logo.png" alt="#">
+                <span id="titulo">FUNAI 0800</span>
+            </div>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="Main.html">Home</a></li>
+                <li><a href="#">Cadastros</a>
+                    <ul>
+                        <li><a href="Cadastro_Profissional.html">Cadastro Profissional</a></li>
+                        <li><a href="Cadastro_Equipamento.html">Cadastro Equipamento</a></li>
+                        <li><a href="Cadastro_Setor.html">Cadastro Setor</a></li>
+                    </ul>
+                <li><a href="aluguel.html">Aluguel</a></li>
+                <li><a href="estoque.html">Estoque</a></li>
+                <li><a href="#">Relatorios</a></li>
+            </ul>
+        </nav>
+
     <h2>Estoque</h2>
 
     <label for="buscaLivre">Busca Livre:</label>
