--- a/Frontend/Main.html
+++ b/Frontend/Main.html
@@ -27,15 +27,15 @@
             <li><a href="#">Relatorios</a></li>
         </ul>
     </nav>
-
-<<<<<<< HEAD
     <h1>Bem-vindo</h1>
-=======
     <h1>KKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKKK</h1>
->>>>>>> b110980a22f750579619946e663e45ef8644434c
     <div id="logo">
             <img src="logo1.png" alt="">
         </div>
     <script src="backend/estoque.js"></script>
+    <footer>    <span>Sistema de gerenciamento inteligente de estoque - SGIE</span>
+        <span>fone: | <a href="#">www.naotemlink.com.us</a></span>
+    </footer>
+
 </body>
 </html>
