--- a/Frontend/estoque.html
+++ b/Frontend/estoque.html
@@ -81,5 +81,9 @@
     </table>
 
     <script src="estoque.js"></script>
+    <footer>
+        <span>Sistema de gerenciamento inteligente de estoque - SGIE</span>
+        <span>fone: | <a href="#">www.naotemlink.com.us</a></span>
+    </footer>
 </body>
 </html>
