--- a/Frontend/Cadastro_Setor.html
+++ b/Frontend/Cadastro_Setor.html
@@ -1,13 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cadastro Setor</title>
-    <link rel="stylesheet" href="cadastroS.css">
-</head>
-<body>
-    <h1>Cadastro Setor</h1>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Meu Site de Cadastros</title>
+        <link rel="stylesheet" href="styles.css">
+    </head>
+    <body>
+        <header>
+            <div id="logo">
+                <img src="logo.png" alt="#">
+                <span id="titulo">FUNAI 0800</span>
+            </div>
+        </header>
+        <nav>
+            <ul>
+                <li><a href="Main.html">Home</a></li>
+                <li><a href="#">Cadastros</a>
+                    <ul>
+                        <li><a href="Cadastro_Profissional.html">Cadastro Profissional</a></li>
+                        <li><a href="Cadastro_Equipamento.html">Cadastro Equipamento</a></li>
+                        <li><a href="Cadastro_Setor.html">Cadastro Setor</a></li>
+                    </ul>
+                <li><a href="aluguel.html">Aluguel</a></li>
+                <li><a href="estoque.html">Estoque</a></li>
+                <li><a href="#">Relatorios</a></li>
+            </ul>
+        </nav>
+
+    <h2>Cadastro Setor</h2>
 
     <form id="cadastroSetorForm">
         <label for="nomeSetor">Nome do Setor:</label>
